# hanz_reader

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  reproduce_issue.py  verify_api.py  verify_url_flow.py
app/: main.py
app/core/: analyzer.py  reference_loader.py  scraper.py
app/data/hsk_levels/: hsk1.csv  hsk2.csv  hsk3.csv  hsk4.csv  hsk5.csv  hsk6.csv
app/models/: schemas.py
app/static/: index.html  script.js  style.css
scripts/: add_headers.py  populate_data.py
tests/: test_analyzer.py  test_reference_loader.py  test_scraper.py
